<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="20dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="✓"
            android:textColor="@color/black"
            android:textSize="50sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mensaje_exito_entrada"
            android:textStyle="bold"
            android:textSize="22sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descripcion_confirmacion"
            android:layout_marginTop="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/fecha"/>

            <TextView
                android:id="@+id/txtFechaConfirmacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="16/05/2025"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/hora"/>

            <TextView
                android:id="@+id/txtHoraConfirmacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="08:15 a.m."/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/ubicacion"/>

            <TextView
                android:id="@+id/txtUbicacionConfirmacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Miraflores, Lima"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/imgFotoConfirmacion"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="25dp"
            android:src="@mipmap/ic_launcher_round"/>

        <Button
            android:id="@+id/btnInicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_incio"
            android:textColor="#FFFFFF"
            android:backgroundTint="@color/fucsia"
            android:layout_marginTop="25dp"/>

    </LinearLayout>

</ScrollView>